Descrição projeto drogarias

--- a/index.html
+++ b/index.html
@@ -140,8 +140,18 @@
 									<div class="posts">
 										<article>
 											<a href="#" class="image"><img src="images/ProjetoEmDdesenvolvimento.PNG" alt="" /></a>
-											<h3>Construção de um programa de fidelidade com clusterização de clientes.</h3>
-											<p>Eu usei Python, Estatística e técnicas não-supervisionadas de Machine Learning, para segmentar um grupo de clientes com base em suas características de performance de compra, a fim de selecionar grupos de clientes para formar um programa de fidelidade com o objetivo de aumentar a receita da empresa. E o resultado dessa solução, caso fosse implementada, seria de R$ 15MM de dólares de receita anual.</p>
+											<h3>Modelo de predição de vendas para uma rede de Drogarias</h3>
+											<p>Construção de uma solução de negócio para a drogaria Rossmann, com o objetivo de prever as vendas das próximas 6 semanas utilizando algoritmos de machine learning.</p>
+											<ul>
+											  <li>Python,</li>
+											  <li>Pandas, Numpy, Plotly, Matplotlib, Sklearn, Seaborn, Requests,</li>
+											  <li>Algoritmos de Machine Learning,</li>
+											  <li>Algoritmos de pré-processamento de dados,</li>
+											  <li>Jupyter Notebook,</li>
+											  <li>Git, Github</li>
+											  <li>Bot Telegram</li>
+											</ul>
+
 											<ul class="actions">
 												<li><a href="#" class="button">Saiba mais</a></li>
 											</ul>
