Att description prediction sales drugstore

--- a/index.html
+++ b/index.html
@@ -144,11 +144,11 @@
 											<p>Construção de uma solução de negócio para a drogaria Rossmann, com o objetivo de prever as vendas das próximas 6 semanas utilizando algoritmos de machine learning.</p>
 											<ul>
 											  <li>Python,</li>
-											  <li>Pandas, Numpy, Plotly, Matplotlib, Sklearn, Seaborn, Requests,</li>
-											  <li>Algoritmos de Machine Learning,</li>
+											  <li>Pandas, Numpy, Matplotlib, Sklearn, Plotly, Seaborn, Requests,</li>
 											  <li>Algoritmos de pré-processamento de dados,</li>
+											  <li>Algoritmos de Machine Learning,</li>
 											  <li>Jupyter Notebook,</li>
-											  <li>Git, Github</li>
+											  <li>Git e Github,</li>
 											  <li>Bot Telegram</li>
 											</ul>
 
