--- a/index.html
+++ b/index.html
@@ -142,6 +142,7 @@
 											<a href="#" class="image"><img src="images/prediction_sales_qg.PNG" alt="" /></a>
 											<h3>Modelo de predição de vendas para uma rede de Drogarias</h3>
 											<p>Construção de uma solução de negócio para a drogaria Rossmann, com o objetivo de prever as vendas das próximas 6 semanas utilizando algoritmos de machine learning.</p>
+											<p><b>Ferramentas utilizadas: </b></p>
 											<ul>
 											  <li>Python,</li>
 											  <li>Pandas, Numpy, Matplotlib, Sklearn, Plotly, Seaborn, Requests,</li>
