--- a/index.html
+++ b/index.html
@@ -139,7 +139,7 @@
 									</header>
 									<div class="posts">
 										<article>
-											<a href="#" class="image"><img src="images/prediction_sales_qg.PNG" alt="" /></a>
+											<a href="https://github.com/andrerochads/Sales_Prediction_for_Drugstore_Chain/tree/main" class="image"><img src="images/prediction_sales_qg.PNG" alt="" /></a>
 											<h3>Modelo de predição de vendas para uma rede de Drogarias</h3>
 											<p>Construção de uma solução de negócio para a drogaria Rossmann, com o objetivo de prever as vendas das próximas 6 semanas utilizando algoritmos de machine learning.</p>
 											<p><b>Ferramentas utilizadas: </b></p>
@@ -154,7 +154,7 @@
 											</ul>
 
 											<ul class="actions">
-												<li><a href="#" class="button">Saiba mais</a></li>
+												<li><a href="https://github.com/andrerochads/Sales_Prediction_for_Drugstore_Chain/tree/main" class="button">Saiba mais</a></li>
 											</ul>
 										</article>
 										<article>
