--- a/index.html
+++ b/index.html
@@ -169,7 +169,7 @@
 											</ul>
 										</article>
 										<article>
-											<a href="#" class="image"><img src="https://github.com/andrerochads/portfolio_projetos/blob/51d0513d2767b00d3f1d25ad75df2091fb033e72/images/ProjetoEmDdesenvolvimento.PNG" alt="" /></a>
+											<a href="#" class="image"><img src="/images/ProjetoEmDdesenvolvimento.PNG" alt="" /></a>
 											<h3>Propensão de Compra de Seguro - Classificação</h3>
 											<p>Construção de uma solução de negócio para uma seguradora, com o objetivo de prever quais clientes comprariam o seguro para carros.</p>
 											<p><b>Ferramentas utilizadas: </b></p>
@@ -210,7 +210,7 @@
 											</ul>
 										</article>
 										<article>
-											<a href="#" class="image"><img src="https://github.com/andrerochads/portfolio_projetos/blob/51d0513d2767b00d3f1d25ad75df2091fb033e72/images/ProximoProjeto.PNG" alt="" /></a>
+											<a href="#" class="image"><img src="images/ProximoProjeto.PNG" alt="" /></a>
 											<h3>Programa de Fidelidade - Clusterização</h3>
 											<p>Nesse projeto, os conceitos de Programação em Python, manipulação de dados, pensamento estratégico e lógica de negócio, junto com ferramentas de desenvolvimetno web como o Streamlit e Github, foram usados para desenvolver um painel gerencial com as principais métricas de uma empresa marketplace de delivery de comida na India.</p>
 											<p>O resultado final do projeto foi um painel hospedado em um ambiente Cloud e disponibilizado através de um link web. O painel pode sexesado por qualquer dispositivo conectado na internet.</p>
