--- a/index.html
+++ b/index.html
@@ -188,7 +188,7 @@
 											</ul>
 										</article>
 										<article>
-											<a href="#" class="image"><img src="images/curry_company.PNG" alt="" /></a>
+											<a href="#" class="image"><img src="images/curry_company.png" alt="" /></a>
 											<h3>Desenvolvimento de um Painel Gerencial para Negócio com o Stremlit</h3>
 											<p>Nesse projeto, os conceitos de Programação em Python, manipulação de dados, pensamento estratégico e lógica de negócio, junto com ferramentas de desenvolvimetno web como o Streamlit e Github, foram usados para desenvolver um painel gerencial com as principais métricas de uma empresa marketplace de delivery de comida na India.</p>
 											<p>O resultado final do projeto foi um painel hospedado em um ambiente Cloud e disponibilizado através de um link web. O painel pode sexesado por qualquer dispositivo conectado na internet.</p>
