--- a/index.html
+++ b/index.html
@@ -151,7 +151,7 @@
 										<article>
 											<a href="https://github.com/andrerochads/Sales_Prediction_for_Drugstore_Chain/tree/main" class="image"><img src="images/prediction_sales_qg.PNG" alt="" /></a>
 											<h3>Modelo de predição de vendas para uma rede de Drogarias - Regressão</h3>
-											<p>Construção de uma solução de negócio para a drogaria Rossmann, com o objetivo de prever as vendas das próximas 6 semanas utilizando algoritmos de machine learning.</p>
+											<p>Construção de uma solução de negócio para uma rede de drogarias, com o objetivo de prever as vendas das próximas 6 semanas utilizando algoritmos de machine learning.</p>
 											<p><b>Ferramentas utilizadas: </b></p>
 											<ul>
 											  <li>Python,</li>
