--- a/index.html
+++ b/index.html
@@ -154,13 +154,13 @@
 											<p>Construção de uma solução de negócio para uma rede de drogarias, com o objetivo de prever as vendas das próximas 6 semanas utilizando algoritmos de machine learning.</p>
 											<p><b>Ferramentas utilizadas: </b></p>
 											<ul>
-											  <li>Python,</li>
-											  <li>Pandas, Numpy, Matplotlib, Sklearn, Plotly, Seaborn, Requests,</li>
-											  <li>Algoritmos de pré-processamento de dados,</li>
-											  <li>Algoritmos de Machine Learning,</li>
-											  <li>Jupyter Notebook,</li>
-											  <li>Git e Github,</li>
-											  <li>Visual Studio Code,</li>
+											  <li>Python</li>
+											  <li>Pandas, Numpy, Matplotlib, Sklearn, Plotly, Seaborn, Requests</li>
+											  <li>Algoritmos de pré-processamento de dados</li>
+											  <li>Algoritmos de Machine Learning</li>
+											  <li>Jupyter Notebook</li>
+											  <li>Git e Github</li>
+											  <li>Visual Studio Code</li>
 											  <li>Bot Telegram</li>
 											</ul>
 
@@ -175,14 +175,14 @@
 											<p>O resultado final do projeto foi um painel hospedado em um ambiente Cloud e disponibilizado através de um link web. O painel pode ser acessado por qualquer dispositivo conectado na internet.</p>
 											<p><b>Ferramentas utilizadas: </b></p>
 											<ul>
-											  <li>Python,</li>
-											  <li>Pandas, Numpy,</li>
+											  <li>Python</li>
+											  <li>Pandas, Numpy</li>
 											  <li>Terminal</li>
 											  <li>Streamlit</li>
 											  <li>Streamlit Cloud</li>
-											  <li>Jupyter Notebook,</li>
-											  <li>Git e Github,</li>
-											  <li>Visual Studio Code,</li>
+											  <li>Jupyter Notebook</li>
+											  <li>Git e Github</li>
+											  <li>Visual Studio Code</li>
 											  
 											</ul>
 
@@ -196,12 +196,12 @@
 											<p>Construção de uma solução de negócio para uma seguradora, com o objetivo de prever quais clientes comprariam o seguro para carros.</p>
 											<p><b>Ferramentas utilizadas: </b></p>
 											<ul>
-											  <li>Python,</li>
-											  <li>Pandas, Numpy, Matplotlib, Sklearn, Plotly, Seaborn, Requests,</li>
-											  <li>Algoritmos de pré-processamento de dados,</li>
-											  <li>Algoritmos de Machine Learning,</li>
-											  <li>Jupyter Notebook,</li>
-											  <li>Git e Github,</li>
+											  <li>Python</li>
+											  <li>Pandas, Numpy, Matplotlib, Sklearn, Plotly, Seaborn, Requests</li>
+											  <li>Algoritmos de pré-processamento de dados</li>
+											  <li>Algoritmos de Machine Learning</li>
+											  <li>Jupyter Notebook</li>
+											  <li>Git e Github</li>
 											  <li>Visual Studio Code</li>
 											</ul>
 
