--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
 												<h3>Linguagens de Programação e Banco de Dados</h3>
 												<ul>
 													<li>Python com foco em análise de dados</li>
-													<li>SQL para extração de dados</li>
+													<li>SQL Language</li>
 													<li>Conceitos de ETL</li>
 													
 												</ul>
@@ -111,6 +111,7 @@
 												<h3>Engenharia de Software</h3>
 												<ul>
 													<li>Git e Github</li>
+													<li>SQLite3 Database</li>
 													<li>Streamlit, Flask, Python API's</li>
 													<li>Cloud Render, Streamlit Cloud</li>
 													
