--- a/index.html
+++ b/index.html
@@ -193,6 +193,25 @@
 										</article>
 										<article>
 											<a href="#" class="image"><img src="images/ProjetoEmDdesenvolvimento.PNG" alt="" /></a>
+											<h3>Predição de preços de carros usados - Regressão</h3>
+											<p>Construção de uma solução de negócio para uma empresa de venda de carros usados.</p>
+											<p><b>Ferramentas utilizadas: </b></p>
+											<ul>
+											  <li>Python</li>
+											  <li>Pandas, Numpy, Matplotlib, Sklearn, Plotly, Seaborn</li>
+											  <li>Algoritmos de pré-processamento de dados</li>
+											  <li>Algoritmos de Machine Learning</li>
+											  <li>Jupyter Notebook</li>
+											  <li>Git e Github</li>
+											  <li>Visual Studio Code</li>
+											</ul>
+
+											<ul class="actions">
+												<li><a href="#" class="button">Saiba mais</a></li>
+											</ul>
+										</article>
+										<article>
+											<a href="#" class="image"><img src="images/ProjetoEmDdesenvolvimento.PNG" alt="" /></a>
 											<h3>Propensão de Compra de Seguro - Classificação</h3>
 											<p>Construção de uma solução de negócio para uma seguradora, com o objetivo de prever quais clientes comprariam o seguro para carros.</p>
 											<p><b>Ferramentas utilizadas: </b></p>
