--- a/index.html
+++ b/index.html
@@ -226,7 +226,7 @@
 											</ul>
 
 											<ul class="actions">
-												<li><a href="#" class="button">Saiba mais</a></li>
+												<li><a href="https://github.com/andrerochads/health_insurance_cross_sell" class="button">Saiba mais</a></li>
 											</ul>
 										</article>
 										<article>
