--- a/index.html
+++ b/index.html
@@ -207,7 +207,7 @@
 											</ul>
 
 											<ul class="actions">
-												<li><a href="#" class="button">Saiba mais</a></li>
+												<li><a href="https://github.com/andrerochads/car_price_prediction" class="button">Saiba mais</a></li>
 											</ul>
 										</article>
 										<article>
