--- a/index.html
+++ b/index.html
@@ -188,7 +188,7 @@
 											</ul>
 
 											<ul class="actions">
-												<li><a href="#" class="button">Saiba mais</a></li>
+												<li><a href="#" class="button">Em Manutenção</a></li>
 											</ul>
 										</article>
 										<article>
